--- a/blogspot.html
+++ b/blogspot.html
@@ -4,19 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> blogspot</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
     <div class="container">
-        <h1 class="blog">
-Soy un blog
-        </h1>
-        <p class="texto">
-Este es un blog para ejemplificar el uso de git
-        </p>
+       <h1>
+        Este es un blog
+    </h1>
+    <p class="texto"> primer parrafo del blog, ademas quiero hacer otro commit</p>
+    <p> se agrego otro parrafo</p>
     </div>
-
-    </div>
+    
 </body>
 </html>
