--- a/blogspot.html
+++ b/blogspot.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div class="container">
+        <div class="cabecera">
+            Esta es una cabecera
+        </div>
        <h1>
         Este es un blog
     </h1>
