--- a/blogspot.html
+++ b/blogspot.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="cabecera">
-            Esta es una cabecera
+            Tech-blog <span> tu blog de confianza</span>
         </div>
        <h1>
         Este es un blog
