--- a/blogspot.html
+++ b/blogspot.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="cabecera">
-            Tech-blog <span> tu blog de confianza</span>
+            Tech-blog <span> tu blog master</span>
         </div>
        <h1>
         Este es un blog
@@ -18,6 +18,7 @@
     <p class="texto"> primer parrafo del blog, ademas quiero hacer otro commit</p>
     <p> se agrego otro parrafo</p>
     <p> Desde lo profundo de mi corazon viene este parr</p>
+    <p>suscribete y dale me gustas</p>
     </div>
     
 </body>
