--- a/blogspot.html
+++ b/blogspot.html
@@ -10,16 +10,21 @@
 <body>
     <div class="container">
         <div class="cabecera">
-            Tech-blog <span> tu blog de tecnologia favorito</span>
+            Tech-blog <span>Tu blog de tecnologia favorito</span>
         </div>
        <h1>
         Este es un blog
     </h1>
     <p class="texto"> primer parrafo del blog, ademas quiero hacer otro commit</p>
-    <p> se agrego otro parrafo</p>
+    <p>se agrego otro parrafo</p>
     <p> Desde lo profundo de mi corazon viene este parr</p>
     <p>suscribete y dale me gustas</p>
+    <footer class="text-footer">
+        <p>
+            Contacto conmigo a traves de <a href="https://wa.me/50370017574">Whatsapp</a>
+        </p>
+    </footer>
     </div>
-    
+   
 </body>
 </html> 
