changed and added logo to header

--- a/blogspot.html
+++ b/blogspot.html
@@ -7,14 +7,20 @@
     <title> blogspot</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
-<body>
+<body class="body">
     <div class="container">
+      
+    <header>
         <div class="cabecera">
-            Tech-blog <span> tu blog de tecnologia favorito</span>
+            <img  class="logo" src="cohete.jfif"> <p >
+                <span class="bold">
+                    Tech-blog
+                </span>  tu blog de tecnologia favorito</p> 
         </div>
        <h1>
         Este es un blog
     </h1>
+    </header>
     <p class="texto"> primer parrafo del blog, ademas quiero hacer otro commit</p>
     <p> se agrego otro parrafo</p>
     <p> Desde lo profundo de mi corazon viene este parr</p>
