fixed conflict not resolved previously

--- a/blogspot.html
+++ b/blogspot.html
@@ -12,23 +12,13 @@
       
     <header>
         <div class="cabecera">
-<<<<<<< HEAD
-<<<<<<< HEAD
-
-=======
->>>>>>> header
+            <header>
             <img  class="logo" src="cohete.jfif"> <p >
                 <span class="bold">
                     Tech-blog
                 </span>  tu blog de tecnologia favorito</p> 
-<<<<<<< HEAD
+ </header>
 
-
-=======
->>>>>>> header
-=======
-            Tech-blog <span>Tu blog de tecnologia favorito</span>
->>>>>>> footer
         </div>
        <h1>
         Este es un blog
