--- a/blogspot.html
+++ b/blogspot.html
@@ -30,7 +30,7 @@
     <p>suscribete y dale me gustas</p>
     <footer class="text-footer">
         <p>
-            Contacto conmigo a traves de <a href="https://wa.me/50370017574">Whatsapp</a>
+            Contacto conmigo a traves de <a href="#">Whatsapp</a>
         </p>
     </footer>
     </div>
